# motion_planning

./: .gitignore  CMakeLists.txt  README.md  package.xml
include/: car.h  mainpage.md  points.h  sine_path.h
launch/: launcher.py
src/: car.cpp  points.cpp  sine_path.cpp
